# gollum

./: .gitignore  .pre-commit-config.yaml  DEPENDENCIES.md  README.md  environment.yaml  pyproject.toml  requirements.txt  train.py
configs/: bochemian.yaml  drfp.yaml  fp.yaml  llm_phi.yaml  pllm.yaml  pllm_phi.yaml
data/buchwald-hartwig/: bh_reaction_1.csv  bh_reaction_2.csv  bh_reaction_3.csv  bh_reaction_4.csv  bh_reaction_5.csv
data/c2-yield/: c2_yield_data.csv
data/hplc/: hplc_data.csv
data/oer/: oer_data.csv
data/suzuki-miyaura/: suzuki_miyaura_data.csv
data/vapdiff/: vapdiff_data.csv
src/gollum/bo/: optimizer.py
src/gollum/data/: module.py
src/gollum/featurization/: base.py  deep.py  general.py  molecular.py  reaction.py  text.py
src/gollum/featurization/utils/: layers.py  pooling.py
src/gollum/initialization/: initializers.py
src/gollum/metrics/: analysis.py  model_metrics.py
src/gollum/surrogate_models/: gp.py
src/gollum/utils/: fonts.py
