[project]
name = "gollum"
version = "0.1.0"
description = "Taken from https://github.com/schwallergroup/gollum"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "botorch>=0.17.2",
    "drfp>=0.3.7",
    "instructorembedding>=1.0.1",
    "jsonargparse>=4.47.0",
    "kmedoids>=0.5.4",
    "matplotlib>=3.10.8",
    "openai>=2.30.0",
    "pandas>=3.0.1",
    "peft>=0.18.1",
    "pytorch-lightning>=2.6.1",
    "rdkit>=2025.9.6",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.3.0",
    "torch>=2.11.0",
    "transformers>=5.4.0",
    "wandb>=0.25.1",
]

# See https://setuptools.readthedocs.io/en/latest/build_meta.html
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"

[tool.black]
line-length = 100
target-version = ["py38", "py39"]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
include_trailing_comma = true
reverse_relative = true
